tests/macros/confirm/editor.stderr
error: option `editor` does not exist for kind `confirm`
 --> tests/macros/confirm/editor.rs:2:45
  |
2 |     let q = requestty::questions![Confirm { editor: todo!() }];
  |                                             ^^^^^^
